# acf-generator-cli

./: .gitignore  Cargo.toml  data-2.json  post-type.json  readme.md
json/: data.json
output/: Flexible Content.php  flexible_content.php
src/: acf.rs  acf_fields.rs  cli_output.rs  deserializer.rs  error.rs  file_gen.rs  file_service.rs  main.rs  php_generator.rs  template_gen.rs
src/acf/: acf.rs  field.rs  field_group.rs  layouts.rs  mod.rs  post_type.rs
src/cli/: args.rs  output.rs
src/utils/: deserializer.rs  file_service.rs  mod.rs  template_gen.rs
