[package]
edition = "2021"
name = "acf-cli"
version = "0.1.0"

[dev-dependencies]
cargo-watch = "8.4.1"

[package.metadata.cargo_watch]
ignore = [
  "target/*",
  "Cargo.lock",
  "**/*.rs.bk",
  "**/*.php",
  "blocks/",
  "output",
]

[dependencies]
clap = {version = "4.4.11", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"

[[bin]]
name = "acf-cli"
path = "src/main.rs"
